# nft-rust

./: .env  Cargo.toml
migrations/: 2024-11-17-create_tables.sql
src/: data.rs  insurance.rs  main.rs  police.rs  repairs.rs  shop.rs
