[package]
name = "nft-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.14"
